--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An HTML sandbox supporting multiple dynamic files.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel parseCode.js --presets es2015 --out-file index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/curran/magic-sandbox/issues"
   },
-  "homepage": "https://github.com/curran/magic-sandbox#readme"
+  "homepage": "https://github.com/curran/magic-sandbox#readme",
+  "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-preset-es2015": "^6.22.0"
+  }
 }
