Add self as contributor

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "contributors": [
     "Geoffery Miller",
     "Paweł Kowalski",
-    "Erik Hazzard"
+    "Erik Hazzard",
+    "Curran Kelleher"
   ],
   "license": "BSD-3-Clause",
   "bugs": {
