--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "bugs": {
     "url": "https://github.com/curran/magic-sandbox/issues"
   },
+  "files": [
+    "magicSandbox.min.js"
+  ],
   "homepage": "https://github.com/curran/magic-sandbox#readme",
   "devDependencies": {
     "babel-cli": "^6.22.2",
