--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An HTML sandbox supporting multiple dynamic files.",
   "main": "magic-sandbox.js",
   "scripts": {
-    "build": "babel src/magicSandbox.js --presets es2015 --plugins transform-es2015-modules-umd --out-file magic-sandbox.js",
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "npm run build && uglifyjs magic-sandbox.js -c -m -o magic-sandbox.min.js"
   },
@@ -29,9 +29,10 @@
   ],
   "homepage": "https://github.com/curran/magic-sandbox#readme",
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-plugin-transform-es2015-modules-umd": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.0",
+    "rollup": "^0.41.6",
+    "rollup-plugin-babel": "^2.7.1",
     "uglifyjs": "^2.4.10"
   }
 }
