Add @micahstubbs as contributor

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "Geoffery Miller",
     "Paweł Kowalski",
     "Erik Hazzard",
-    "Curran Kelleher"
+    "Curran Kelleher",
+    "Micah Stubbs"
   ],
   "license": "BSD-3-Clause",
   "bugs": {
