--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "babel-preset-es2015": "^6.24.0",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
-    "uglifyjs": "^2.4.10"
+    "uglify-js": "^3.2.2"
   }
 }
