--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "magic-sandbox",
+  "name": "@zischwartz/magic-sandbox",
   "version": "1.0.0",
   "description": "An HTML sandbox supporting multiple dynamic files.",
   "main": "magic-sandbox.js",
