--- a/package.json
+++ b/package.json
@@ -31,10 +31,8 @@
   ],
   "homepage": "https://github.com/datavis-tech/magic-sandbox#readme",
   "devDependencies": {
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.0",
-    "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1",
-    "uglifyjs": "^2.4.10"
+    "rollup": "^1.17.0",
+    "rollup-plugin-buble": "^0.19.8",
+    "uglify-js": "^3.6.0"
   }
 }
