--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "magic-sandbox",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "type": "module",
   "main": "./dist/index.js",
@@ -19,16 +19,24 @@
     "prepare": "npm run build",
     "test": "vitest run",
     "test:watch": "vitest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prettier": "prettier {*.*,**/*.*} --write"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ian Johnson (@enjalot)",
+  "contributors": [
+    "Geoffery Miller (@georules)",
+    "Paweł Kowalski (@pavelloz)",
+    "Erik Hazzard (@erikhazzard)",
+    "Curran Kelleher (@curran)",
+    "Micah Stubbs (@micahstubbs)"
+  ],
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^22.13.10",
+    "prettier": "^3.5.3",
     "puppeteer": "^24.4.0",
     "typescript": "^5.8.2",
     "vitest": "^3.0.8"
-  },
-  "dependencies": {}
+  }
 }
